[package]
name = "simple-bot"
version = "0.2.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2018"

[[bin]]
name = "simple-bot"

[profile.release]
debug = true

[dependencies]
anyhow = "1"
base64 = "0.12"
directories = "2"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
slog-async = "2"
slog-envlogger = "2"
slog-term = "2"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["macros", "rt-core", "signal"] }
toml = "0.4"
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", branch = "develop", default-features = false }
# TODO Needed to load the private key
tsproto = { git = "https://github.com/ReSpeak/tsclientlib", branch = "develop" }

[dependencies.slog]
version = "2"
features = ["max_level_trace", "release_max_level_debug"]
