[package]
name = "simple-bot"
version = "0.2.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2021"

[[bin]]
name = "simple-bot"

[profile.release]
debug = true

[dependencies]
anyhow = "1"
base64 = "0.13"
directories-next = "2"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
slog-async = "2"
slog-envlogger = "2"
slog-term = "2"
clap = { version = "3", default-features = false, features = ["derive", "std"] }
tokio = { version = "1", features = ["signal"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", default-features = false }
# TODO Needed to load the private key
tsproto-types = { git = "https://github.com/ReSpeak/tsclientlib" }
