[package]
name = "simple-bot"
version = "0.2.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2021"

[[bin]]
name = "simple-bot"

[profile.release]
debug = true

[dependencies]
anyhow = "1"
base64 = "0.21"
directories-next = "2"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["signal"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", default-features = false }
# TODO Needed to load the private key
tsproto-types = { git = "https://github.com/ReSpeak/tsclientlib" }
